--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ time, mark, audio, video, button {
     vertical-align: baseline;
 }
 
+[type=button], [type=reset], [type=submit], button {
+    -webkit-appearance: button;
+    background: transparent;
+    cursor: pointer;
+}
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -86,6 +92,19 @@ body {
     clip: rect(0, 0, 0, 0);
 }
 
+.skip-link:focus {
+    width: auto;
+    height: auto;
+    top: 16px;
+    left: 16px;
+    clip: auto;
+    overflow: visible;
+    background-color: #2979ff;
+    padding: 12px;
+    z-index: 1000;
+    color: #fff;
+}
+
 /* Header */
 .header {
     position: relative;
@@ -127,6 +146,14 @@ body {
     font-size: 18px;
 }
 
+.menu-button {
+    display: none;
+}
+
+.navbar {
+    transition: background-color 0.1s;
+}
+
 .navbar-inner {
     display: flex;
     justify-content: space-between;
@@ -141,7 +168,16 @@ body {
     align-items: center;
 }
 
-.menu-list{
+.nav.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    background-color: #000;
+}
+
+.menu-list {
     display: flex;
     font-family: Lora;
     font-size: 14px;
@@ -292,6 +328,69 @@ body {
     padding: 24px;
     font-size: 12px;
 }
+
+/* responsive web */
+@media screen and (max-width: 768px) {
+    /* Mobile */
+
+    /* Header */
+    .menu-button {
+        display: block;
+        color: #bdbdbd;
+        font-size: 24px;
+    }
+
+    .navbar-inner {
+        position: relative;
+        flex-wrap: wrap;
+    }
+    
+    .nav {
+        position: absolute;
+        top: 82px;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        display: none;
+        width: 100%;
+        height: 0;
+        transition: height 0.2s;
+    }
+    
+    .nav.active {
+        display: block;
+        height: auto;
+    }
+
+    .menu-list {
+        flex-direction: column;
+        background-color: #000000;
+    }
+
+    /* Main */
+    .section {
+        flex-direction: column;
+    }
+    
+    .section-title {
+        margin-bottom: 16px;
+        text-align: center;
+    }
+
+    .category-list {
+        text-align: center;
+    }
+
+    .project-item {
+        margin-bottom: 16px;
+    }
+
+    .project-title {
+        margin-bottom: 8px;
+        text-align: center;
+    }
+}
+
 
 
 
