--- a/style.css
+++ b/style.css
@@ -168,15 +168,6 @@ body {
     align-items: center;
 }
 
-.nav.active {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-    background-color: #000;
-}
-
 .menu-list {
     display: flex;
     font-family: Lora;
@@ -328,6 +319,30 @@ body {
     padding: 24px;
     font-size: 12px;
 }
+
+.floating-button.active {
+    display: block;
+}
+
+.floating-button {
+    position: fixed;
+    right: 48px;
+    bottom: 48px;
+    display: none;
+    width: 32px;
+    height: 32px;
+    border-radius: 2px;
+    color: #616161;
+    background-color: #f5f5f5;
+    cursor: pointer;
+    transition: color, background-color 0.2s;
+}
+
+.floating-button:hover, .floating-button:focus {
+    color: #f5f5f5;
+    background: #616161;
+  }
+  
 
 /* responsive web */
 @media screen and (max-width: 768px) {
